changed header and added nav

--- a/css/index.css
+++ b/css/index.css
@@ -31,6 +31,11 @@ footer, header, hgroup, menu, nav, section {
 body {
 	line-height: 1;
 }
+.logo img{
+    width: 80px;
+    
+    display: inline-block;
+}
 ol, ul {
 	list-style: none;
 }
@@ -47,6 +52,36 @@ table {
 	border-spacing: 0;
 }
 
+.box1{
+    background-color: teal;
+}
+.box2{
+    background-color: gold;
+}
+.box3{
+    background-color: cadetblue;
+}
+.box4{
+    background-color: coral;
+}
+.box5{
+    background-color: crimson;
+}
+.box6{
+    background-color: forestgreen;
+}
+.box7{
+    background-color: darkorchid;
+}
+.box8{
+    background-color: hotpink;
+}
+.box9{
+    background-color: indigo;
+}
+.box10{
+    background-color: dodgerblue;
+}
 * {
     box-sizing: border-box;
 }
