--- a/css/index.css
+++ b/css/index.css
@@ -53,33 +53,63 @@ table {
 
 .box1{
     background-color: teal;
+    width: 100px;
+    height: 100px;
+    margin: 20px;
 }
 .box2{
     background-color: gold;
+    width: 100px;
+    height: 100px;
+    margin: 20px;
 }
 .box3{
     background-color: cadetblue;
+    width: 100px;
+    height: 100px;
+    margin: 20px;
 }
 .box4{
     background-color: coral;
+    width: 100px;
+    height: 100px;
+    margin: 20px;
 }
 .box5{
     background-color: crimson;
+    width: 100px;
+    height: 100px;
+    margin: 20px;
 }
 .box6{
     background-color: forestgreen;
+    width: 100px;
+    height: 100px;
+    margin: 20px;
 }
 .box7{
     background-color: darkorchid;
+    width: 100px;
+    height: 100px;
+    margin: 20px;
 }
 .box8{
     background-color: hotpink;
+    width: 100px;
+    height: 100px;
+    margin: 20px;
 }
 .box9{
     background-color: indigo;
+    width: 100px;
+    height: 100px;
+    margin: 20px;
 }
 .box10{
     background-color: dodgerblue;
+    width: 100px;
+    height: 100px;
+    margin: 20px;
 }
 * {
     box-sizing: border-box;
@@ -104,7 +134,9 @@ p {
     width: 800px;
     margin: 0 auto;
 }
-
+.boxes{
+    display: flex;
+}
 .container .logo {
     display:inline-block;
     width:20%;
@@ -121,6 +153,9 @@ p {
 
   .container nav a{
     padding:13px 30px;
+    text-decoration: none;
+    color: black;
+
   }
 
 .top-content {
